--- a/Transaction.Api/Transaction.Api.csproj
+++ b/Transaction.Api/Transaction.Api.csproj
@@ -33,4 +33,8 @@
       <ProjectReference Include="..\Transaction.Infrastructure\Transaction.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Middlewares\" />
+    </ItemGroup>
+
 </Project>
