--- a/Transaction.Api/appsettings.Development.json
+++ b/Transaction.Api/appsettings.Development.json
@@ -1,4 +1,32 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Host=transaction.db;Port=5432;Database=transaction;Username=postgres;Password=postgres"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning",
+        "Microsoft.AspNetCore": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/log-.txt",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": "true",
+          "retainedFileCountLimit": 7,
+          "formater": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
