--- a/Transaction.Application/Transaction.Application.csproj
+++ b/Transaction.Application/Transaction.Application.csproj
@@ -11,8 +11,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.35" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+      <PackageReference Include="GeoTimeZone" Version="5.3.0" />
       <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="Npgsql" Version="8.0.2" />
     </ItemGroup>
 
 </Project>
