added use cases for getting transaction by year in api and user timezones

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@
     
   transaction.api:
     image: transaction.api
+    ports:
+      - "5000:8080"
     build:
       context: .
       dockerfile: Transaction.Api/Dockerfile
