--- a/Transaction.Api/appsettings.Development.json
+++ b/Transaction.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Host=localhost;Port=5432;Database=transaction;Username=postgres;Password=postgres"
+    "DefaultConnection" : "Host=transaction.db;Port=5432;Database=transaction;Username=postgres;Password=postgres"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
