--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@
     ports:
       - "5432:5432"
     volumes:
-      - ../volumes/transaction-db:/var/lib/postgresql/data
+      - ./volumes/transaction-db:/var/lib/postgresql/data
     
   transaction.api:
     image: transaction.api
